--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -25,6 +25,7 @@
     "govuk-frontend": "2.5.1",
     "html5shiv": "^3.7.3",
     "jest": "^23.6.0",
+    "lodash": "^4.17.11",
     "merge": "^1.2.1",
     "mini-css-extract-plugin": "0.4.1",
     "node-sass": "4.9.3",
