--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -35,7 +35,7 @@
     "uglifyjs-webpack-plugin": "1.3.0",
     "webpack": "4.16.5",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5",
+    "webpack-dev-server": "^3.1.14",
     "webpack-hot-middleware": "2.22.3"
   }
 }
